WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290203
[iOS Debug] TestWebKitAPI.IndexedDB.IndexedDBSuspendImminently is a failure/timeout
https://bugs.webkit.org/show_bug.cgi?id=290203
Summary
[iOS Debug] TestWebKitAPI.IndexedDB.IndexedDBSuspendImminently is a failure/t...
Marta Darbinyan
Reported
2025-03-21 12:23:58 PDT
TestWebKitAPI.IndexedDB.IndexedDBSuspendImminently is timing out in iOS and also flaky in API-Tests-iOS-Simulator-EWS. The test started failing within the range of
291435@main...291445@main
. TestWebKitAPI.IndexedDB.IndexedDBSuspendImminently ERROR: Unhandled web process message 'WebPage_RegisterURLSchemeHandler' (destination: 10 pid: 20584) /Volumes/Data/worker/Apple-iOS-18-Simulator-Debug-Build/build/Source/WebKit/WebProcess/WebProcess.cpp(1033) : virtual bool WebKit::WebProcess::filterUnhandledMessage(IPC::Connection &, IPC::Decoder &) ERROR: Attempt to commit a transaction that hasn't been established /Volumes/Data/worker/Apple-iOS-18-Simulator-Debug-Build/build/Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp(1007) : virtual IDBError WebCore::IDBServer::SQLiteIDBBackingStore::commitTransaction(const IDBResourceIdentifier &) /Volumes/Data/worker/Apple-iOS-18-Simulator-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IndexedDBSuspendImminently.mm:62 Expected equality of these values: expectedMessage Which is: "Expected Success After Resume" string.get() Which is: "Unexpected Abort" LEAK: 1 WebProcessPool History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.IndexedDB.IndexedDBSuspendImminently
Test results:
https://build.webkit.org/#/builders/1392/builds/512/steps/22/logs/stdio
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-21 12:24:27 PDT
<
rdar://problem/147599411
>
EWS
Comment 2
2025-03-21 14:31:43 PDT
Test gardening commit
292509@main
(61ecf6c4b8d6): <
https://commits.webkit.org/292509@main
> Reviewed commits have been landed. Closing PR #42838 and removing active labels.
Alex Christensen
Comment 3
2025-03-24 16:12:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42962
EWS
Comment 4
2025-03-25 11:18:04 PDT
Committed
292658@main
(a899e6f6ed50): <
https://commits.webkit.org/292658@main
> Reviewed commits have been landed. Closing PR #42962 and removing active labels.
EWS
Comment 5
2025-04-07 10:10:32 PDT
Test gardening commit
293367@main
(56404608405a): <
https://commits.webkit.org/293367@main
> Reviewed commits have been landed. Closing PR #43505 and removing active labels.
Jonathan Bedard
Comment 6
2025-05-13 08:03:41 PDT
Original gardening for this change was not correct, and basically did the opposite of what we wanted it to: we disabled the test on Release and enabled it on Debug, we should have done the opposite. Also, the bug clearly is not fixed. Re-opening to correct the gardening.
Jonathan Bedard
Comment 7
2025-05-13 08:04:20 PDT
Re-opening, the bug is not resolved
EWS
Comment 8
2025-05-13 10:13:36 PDT
Test gardening commit
294853@main
(5e392666ad5a): <
https://commits.webkit.org/294853@main
> Reviewed commits have been landed. Closing PR #45313 and removing active labels.
EWS
Comment 9
2025-05-23 16:58:04 PDT
Test gardening commit
295374@main
(08c0f307cdaa): <
https://commits.webkit.org/295374@main
> Reviewed commits have been landed. Closing PR #45867 and removing active labels.
Sihui Liu
Comment 10
2025-10-26 22:44:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53019
EWS
Comment 11
2025-10-28 16:45:56 PDT
Committed
302265@main
(d6d6abb3a366): <
https://commits.webkit.org/302265@main
> Reviewed commits have been landed. Closing PR #53019 and removing active labels.
Sihui Liu
Comment 12
2025-10-28 19:57:22 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/53121
EWS
Comment 13
2025-10-28 20:02:07 PDT
Committed
302276@main
(498fe03534e5): <
https://commits.webkit.org/302276@main
> Reviewed commits have been landed. Closing PR #53121 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug